--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
     "passport": "^0.5.2",
-    "passport-google-oauth": "^2.0.0"
+    "passport-google-oauth": "^2.0.0",
+    "path": "^0.12.7",
+    "serve-favicon": "^2.5.0"
   }
 }
